--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+     <p>
+    gi  Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil fuga
+      architecto, sit eos eum aspernatur beatae quae in eius eaque est magni
+      recusandae quibusdam. Laborum laudantium nulla aliquam? Perferendis?
+    </p>
+    <p>text</p>
+  </head>
+  <body></body>
 </html>
