add another text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       recusandae quibusdam. Laborum laudantium nulla aliquam? Perferendis?
     </p>
     <p>text</p>
+    <p>another text</p>
   </head>
   <body></body>
 </html>
