--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <p>text</p>
     <p>another text</p>
     <p>New branch text</p>
+    <span>New span</span>
   </head>
   <body></body>
 </html>
