--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <p>text</p>
     <p>another text</p>
+    <span>span text</span>
   </head>
   <body></body>
 </html>
